[package]
name = "rust-wasm-lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.83"
js-sys = "0.3.60"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.4.5"
console_error_panic_hook = { version = "0.1.6", optional = true }
web-sys = { version = "0.3.60", features = ['console'] }

[dev-dependencies]
wasm-bindgen-test = "0.3.13"

[profile.release]
debug = true